[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ignorem"
version = "0.1.0"
description = "Generate .gitignore files"
authors = [
    { name = "Izzat Z.", email = "izzat.zainir11@gmail.com" }
]
readme = "README.md"
license = {file = "COPYING"}
requires-python = "==3.11.6"
dependencies = [
    "pygobject==3.46.0",
    "requests==2.31.0"
]

[tool.setuptools]
packages = ["ignorem"]

[project.optional-dependencies]
dev = [
    "pre-commit"
]
lint = [
    "ruff",
    "black"
]
typing = [
    "mypy",
    "types-requests",
    "pygobject-stubs"
]

[tool.ruff]
src = ["ignorem"]
fix = true
show-fixes = true
extend-select = [
    "N",    # pep8-naming
    "W",    # pycodestyle warning
    "I",    # isort
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]

[tool.ruff.isort]
case-sensitive = true
known-first-party = ["ignorem"]

[tool.mypy]
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "ignorem.ui.page_preview",
    "ignorem.ui.page_search",
    "ignorem.ui.window_main"
]
disable_error_code = [
    "assignment",
    "method-assign",
    "truthy-function"
]
