[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ignorem"
version = "0.1.0"
description = "Generate .gitignore files"
authors = [
    { name = "Izzat Z.", email = "izzat.zainir11@gmail.com" }
]
readme = "README.md"
license = {file = "COPYING"}
requires-python = "==3.11.5"
dependencies = [
    "pygobject==3.46.0",
    "requests==2.31.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.5.0"
]
dev-types = [
    "types-requests",
    "pygobject-stubs"
]
dev-lint = [
    "ruff==0.1.1",
    "black==23.10.0",
    "mypy==1.6.1"
]

[tool.setuptools]
packages = ["ignorem"]

[tool.ruff]
src = ["ignorem"]
fix = true
show-fixes = true
extend-select = [
    "RUF",  # Ruff
    "PL",   # PyLint
    "N",    # pep8-naming
    "E",    # pycodestyle errors
    "W",    # pycodestyle warning
    "I",    # isort
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
extend-ignore = [
    "PLR2004",  # Magic value
    "PLR0913"   # Too many args
]

[tool.ruff.isort]
case-sensitive = true
known-first-party = ["ignorem"]

[tool.mypy]
strict = true
show_error_codes = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "ignorem.gui.pages.*",
    "ignorem.gui.window"
]
disable_error_code = [
    "assignment",
    "method-assign",
    "truthy-function"
]
